--- a/app/assets/stylesheets/auctions/_auction.css.scss
+++ b/app/assets/stylesheets/auctions/_auction.css.scss
@@ -166,6 +166,7 @@ img {
   color: #444;
   font-size: 1em;
   font-weight: bold;
+  letter-spacing: .07em;
   width: 13%;
   &:before {
     height: 0px;
@@ -173,7 +174,8 @@ img {
 }
 .list-item .price {
 	color: #444;
-	font-size: 1em;
+	font-size: 1.03em;
+  letter-spacing: .06em;
 	margin-left: 12%; // Width of self
 	margin-top: 0px;
 	width: 12%;
@@ -209,6 +211,7 @@ img {
   color: #999;
   font-size: .8em;
   font-weight: normal;
+  letter-spacing: 0em;
   margin-top: 0;
   margin-bottom: 0;
   padding: 4px 0 3px 3px;
